# cookiecutter-djangopackage-helper

./: CHANGELOG.md  CONTRIBUTING.rst  README.rst  contributors.rst  cookiecutter.json
tests/: test_bake_project.py
{{cookiecutter.repo_name}}/: .checkignore  .codeclimate.yml  .coveragerc  Makefile  README.rst  cms_helper.py  requirements-dev.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.repo_name}}/docs/: conf.py
{{cookiecutter.repo_name}}/tests/: base.py  test_models.py
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/: __init__.py  models.py  urls.py  views.py
